--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "chart.js": "^4.4.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
